2005-05-02  Albert Chu  <chu11@llnl.gov>

	* Add config file funcs into libcerebro.

	* Work config file loading/unloading into libcerebro updown library.
	
	* Work config file funcs in cerebrod.
	
2005-05-01  Albert Chu  <chu11@llnl.gov>

	* Rework cerebro lib and cerebrod daemon to use default module so
	that binaries do not need to be aware of whether a module is
	loaded or not.
	
2005-04-30  Albert Chu  <chu11@llnl.gov>

	* Removed none module.

	* Reworked cerebro lib and cerebrod daemon to assume none module
	behavior when a clusterlist module is not loaded.

	* Remove clusterlist and config configuration command line options
	and configuration file options.  Now modules are searched for and
	that's it.

	* Make hostsfile module configurable at compile time.
	
2005-04-29  Albert Chu  <chu11@llnl.gov>

	* Added parse_options function to config modules.

	* Create new libmodule for common parse_options code between
	  clusterlist and config modules.

	* Putting module search and loading into libcerebro.

	* Rework cerebrod to use new libcerebro module functions.

	* Remove -c and -m options from cerebrod in non-debug mode.

	* Support clusterlist modules in libcerebro updown library.

	* Fixed various bugs.
	
2005-04-28  Albert Chu  <chu11@llnl.gov>

	* Re-worked packet unmarshalling logic.

	* Fixed updown server to handle more error conditions.

	* Allow updown server to return invalid packet format error code.

	* Shorten hostnames in hostsfile clusterlist module.

	* src/cerebrod/cerebrod_updown.c
	(_cerebrod_updown_create_and_setup_socket): Turn on SO_REUSEADDR
	for server debugging.

	* Finished first round of libcerebro updown API.

	* Put all lib functions under just cerebro.h.

2005-04-27  Albert Chu  <chu11@llnl.gov>

	* Re-worked modules to not exit on errors, error handling is now
	the reponsibility of the caller.

	* Re-worked cerebrod daemon around above changes.
	
2005-04-26  Albert Chu  <chu11@llnl.gov>
